--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,7 +59,7 @@
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginTop="32dp"
-        android:background="@android:color/holo_blue_dark"
+        android:background="@drawable/button_style"
         android:text="Sign in"
         app:layout_constraintEnd_toEndOf="@+id/password_input_loginform"
         app:layout_constraintHorizontal_bias="0.491"
