--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_height="34dp"
         android:layout_marginTop="16dp"
         android:gravity="center_horizontal"
-        android:text="Log in"
+        android:text="@string/log_in"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -30,8 +30,10 @@
         android:width="250dp"
         android:background="@drawable/rounded_edittext"
         android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingStart="20dp"
         android:textSize="20sp"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
@@ -45,9 +47,11 @@
         android:layout_marginTop="32dp"
         android:width="250dp"
         android:background="@drawable/rounded_edittext"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
+        android:paddingStart="20dp"
         android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/email_input_loginform"
         app:layout_constraintHorizontal_bias="1.0"
@@ -60,7 +64,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/button_style"
-        android:text="Sign in"
+        android:text="@string/sign_in"
         app:layout_constraintEnd_toEndOf="@+id/password_input_loginform"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="@+id/password_input_loginform"
@@ -73,7 +77,7 @@
         android:layout_marginTop="32dp"
         android:textColor="@color/purple_500"
         android:textStyle="bold"
-        android:text="back to registration"
+        android:text="@string/back_to_registration"
         app:layout_constraintEnd_toEndOf="@+id/login_button_loginform"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="@+id/login_button_loginform"
