--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFEB3B"
-    tools:context=".RegisterActivity">
+    android:background="@android:color/holo_red_dark"
+    tools:context=".auth.RegisterActivity">
 
 
     <TextView
@@ -46,8 +46,8 @@
         android:rotation="0"
         android:src="@drawable/image_style"
         android:translationZ="100dp"
-        app:civ_border_width="4dp"
         app:civ_border_color="@android:color/holo_blue_dark"
+        app:civ_border_width="4dp"
         app:layout_constraintBottom_toBottomOf="@+id/image_upload_button_registerform"
         app:layout_constraintEnd_toEndOf="@+id/image_upload_button_registerform"
         app:layout_constraintStart_toStartOf="@+id/image_upload_button_registerform"
@@ -70,7 +70,6 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 
     <EditText
@@ -114,7 +113,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/already_registered_log_in_here"
-        android:textColor="@color/purple_500"
+        android:textColor="@color/browser_actions_bg_grey"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/register_button_registerform"
         app:layout_constraintStart_toStartOf="@+id/register_button_registerform"
@@ -122,6 +121,7 @@
 
     <Button
         android:id="@+id/register_button_registerform"
+        android:textColor="@color/white"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
