--- a/app/src/main/res/layout/activity_message_log.xml
+++ b/app/src/main/res/layout/activity_message_log.xml
@@ -37,6 +37,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/message_log_recyclerview"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="12dp"
