--- a/app/src/main/res/layout/activity_notify.xml
+++ b/app/src/main/res/layout/activity_notify.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="12dp"
-        android:background="@android:color/holo_red_dark"
+        android:background="@android:color/holo_blue_light"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
