--- a/app/src/main/res/layout/message_incoming_row.xml
+++ b/app/src/main/res/layout/message_incoming_row.xml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginBottom="8dp"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/message_from"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:background="@drawable/rounded_edittext"
         android:maxWidth="256dp"
         android:padding="16dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
         android:text="Message from Message from Message from Message from Message from Message from Message from "
         app:layout_constraintStart_toEndOf="@+id/image_from"
         app:layout_constraintTop_toTopOf="@+id/image_from" />
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
+        app:civ_border_color="@android:color/holo_blue_dark"
+        app:civ_border_width="4dp"
         android:id="@+id/image_from"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:srcCompat="@android:drawable/sym_action_chat" />
 </androidx.constraintlayout.widget.ConstraintLayout>
