--- a/app/src/main/res/layout/message_outgoing_row.xml
+++ b/app/src/main/res/layout/message_outgoing_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +8,9 @@
     android:layout_marginBottom="8dp">
 
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
+        app:civ_border_color="@android:color/holo_blue_dark"
+        app:civ_border_width="4dp"
         android:id="@+id/image_to"
         android:layout_width="68dp"
         android:layout_height="59dp"
@@ -16,10 +19,10 @@
         android:layout_marginRight="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/btn_star_big_on" />
+        app:srcCompat="@android:drawable/sym_action_chat" />
 
     <TextView
-        android:id="@+id/text_to"
+        android:id="@+id/message_to"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
