--- a/app/src/main/res/layout-land/activity_message_log.xml
+++ b/app/src/main/res/layout-land/activity_message_log.xml
@@ -9,14 +9,14 @@
 
     <EditText
         android:id="@+id/message_log_input_field"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:hint="@string/type_message"
+        android:hint="Type message"
         app:layout_constraintBottom_toBottomOf="@+id/message_log_send_button"
         app:layout_constraintEnd_toStartOf="@+id/message_log_send_button"
         app:layout_constraintTop_toTopOf="@+id/message_log_send_button"
@@ -30,7 +30,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/button_style"
-        android:text="@string/send"
+        android:text="send"
         android:textColor="#3F51B5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -44,7 +44,8 @@
         android:background="@android:color/holo_blue_bright"
         app:layout_constraintBottom_toTopOf="@+id/message_log_input_field"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
